# gr_perception

./: .gitignore  realsense_dualcamera.launch  realsense_dualcamera_2.launch  realsense_left.launch  realsense_right.launch
data_preparation/: check_consistency.py  createfile.py  crop_newdataset.py  files_aaaaa.txt  files_abcde_filtered.txt  files_bbbbbb2.txt  files_housesshuf_filtered.txt  files_main_filtered.txt  files_nibioshuf_filtered.txt  image2topic.py  image_rotate.py  open_rgba_image.py  open_rgba_image0.py  save_rgba_image.py  save_rgba_image2.py
data_preparation/house/: files_aaaaa.txt  files_cccccccccc.txt
data_preparation/real/: files_train.txt  files_valid.txt
docs/doxygen/html/: CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  CODE__OF__CONDUCT_8md_source.html  DeformConv_8h_source.html  DeformConv__cpu_8cpp_source.html  KITTI_2custom_2image__processing_8py_source.html  KITTI_2relabel_8py_source.html  KITTI_2test__bb_8py_source.html  PSROIAlign_8h_source.html  PSROIAlign__cpu_8cpp_source.html  PSROIPool_8h_source.html  PSROIPool__cpu_8cpp_source.html  ROIAlign_8h_source.html  ROIAlign__cpu_8cpp_source.html  ROIPool_8h_source.html  ROIPool__cpu_8cpp_source.html  VideoReader_8cpp_source.html  VideoReader_8h_source.html  __functional__video_8py_source.html  __register__onnx__ops_8py_source.html  __transforms__video_8py_source.html  __video__opt_8py_source.html  alexnet_8cpp_source.html  alexnet_8h_source.html  alexnet_8py_source.html  annotated.html  append__layers_8py_source.html  (+2134 more)
feature_generation/bag_2_images/: bag2images.py
feature_generation/image_processing/: image_extractor.py
feature_generation/lidar_2_image/: fs_image_safety_labeler.py  fs_safety_labeler.py  image_safety_labeler.py  safety_labeler.py
feature_generation/rgb_2_thermal/: NOTES  data_loader.py  dummy_test.py  generator.py  load_model.py  load_modelp2p.py  load_prebuiltmodel.py  main.py  pix_2_pix.py  rgbcsv_bag_0.txt  testing_script.py  timestamped_matching.py  timestamped_matching_v2.py  unet.py  unet_json.py  unet_main.py
fusion_components/gr_fused_detectors/: CMakeLists.txt  package.xml
fusion_components/gr_fused_detectors/config/: config.yaml
fusion_components/gr_fused_detectors/include/gr_fused_detectors/: fused_detectors.h
fusion_components/gr_fused_detectors/launch/: gr_fused_detectors.launch
fusion_components/gr_fused_detectors/src/: fused_detectors.cpp  ros_wrapper_node.cpp
gr_ml/: package.xml
gr_ml/idea_2/: demo_net.pth  idea_2.1.ipynb  idea_2.ipynb
gr_ml/nb/: Untitled.ipynb  attempt yolo-binary.ipynb  attempt yolo.ipynb  iros2021.ipynb  iros2021_rgbd.ipynb  linearregressionpersons.ipynb  logisticregressionpersons.ipynb  pointclouds-deeplearning.ipynb  pointnet.ipynb  svmpersons.ipynb  tuttifruit.cfg  tuttifruti.data  utils.py
gr_ml/scripts/: persons_pcd.py  safety_classifier.py
gr_perception/: CMakeLists.txt  package.xml
gr_processing/common_detection_utils/: CMakeLists.txt  package.xml
gr_processing/common_detection_utils/include/common_detection_utils/: common_detection_utils.h  fusion_detection_utils.hpp  math_functions.hpp
gr_processing/common_detection_utils/src/: common_detection_utils.cpp  fusion_detection_utils_node.cpp
gr_processing/gr_crop_detection/: config.yaml  crop_detector.py  crop_detector_node.py  test_node.py
gr_processing/gr_depth_processing/: CMakeLists.txt  package.xml
gr_processing/gr_depth_processing/include/gr_depth_processing/: depth_filters.h  depth_processing.h
gr_processing/gr_depth_processing/launch/: gr_depth_procesing_nodelet.launch  gr_depth_procesing_nodelet2.launch  pc_processing.launch  register_depth.launch
gr_processing/gr_depth_processing/src/: depth_proximity_policy.cpp
gr_processing/gr_fdd/: CMakeLists.txt  package.xml
gr_processing/gr_fdd/include/gr_fdd/: data_container.h  monitor.h
gr_processing/gr_fdd/src/: monitor.cpp  recovery_executor.cpp
gr_processing/gr_fdd/src/fdd_monitor_py/: cpu_monitor.py
gr_processing/gr_mobilenet/: CMakeLists.txt
gr_processing/gr_pointcloud_filter/: CMakeLists.txt  package.xml
gr_processing/gr_pointcloud_processing/: CMakeLists.txt  nodelet_plugin.xml  package.xml
gr_processing/gr_pointcloud_processing/cfg/: PointCloud.cfg
gr_processing/gr_pointcloud_processing/include/gr_pointcloud_processing/: math_functions.hpp  pointcloud_processing.h  utils.h
gr_processing/gr_pointcloud_processing/launch/: pointcloud_processing.launch
gr_processing/gr_pointcloud_processing/src/: pointcloud_processing.cpp  pointcloud_processing_node.cpp
gr_processing/gr_thermal_processing/: CMakeLists.txt  package.xml
gr_processing/gr_thermal_processing/cfg/: Thermal.cfg
gr_processing/gr_thermal_processing/include/gr_thermal_processing/: thermal_config.hpp  thermal_filters.h  thermal_processing.h
gr_processing/gr_thermal_processing/src/: node_thermal.cpp  thermal_processing.cpp
gr_processing/pointcloud_tools/: CMakeLists.txt  package.xml
gr_processing/pointcloud_tools/src/: pointcloud_tools.cpp
gr_tools/gr_safety_tools/: convert.py  odom_fake.py  plot_gridmap.py  restamping.py  restamping2.py
gr_tools/image_process/: image_rotate.py  points_projections.py
gr_tools/kalmanfilter/: labels_kf.py
gr_tools/label_tools/: classes.names  classes8.names  download.py  downloader.py  filter_down.py  image_sim_animation.py  manual_filtered.txt  new_valid.txt  person_sim_animation.py  sim_animation_manager.py  test_bb.py  valid.txt  yolo_count.sh
gr_tools/pcl_cuda_tools/: CMakeLists.txt
gr_tools/pcl_gpu_tools/: CMakeLists.txt  package.xml
gr_tools/persons_stuff/: CMakeLists.txt  package.xml
gr_tools/persons_stuff/include/persons_stuff/: persons_pcd_reader.h
gr_tools/persons_stuff/scripts/: persons_coordinate.py  persons_heatmap.py  persons_risk_heatmap.py  persons_speed_map.py  persons_trajectories.py  safety_indexplotter.py  speed_profile_plots.py  speed_profiles_plos.py
gr_tools/persons_stuff/src/: persons_pcd_reader.cpp  persons_pcd_reader_node.cpp
gr_tools/tracker/: cv2_tracker.py  darknet_tracker.py
ml_playground/: experiments.ipynb
(+6544 files in other folders)
