<?xml version="1.0"?>
<package format="2">
  <name>common_detection_utils</name>
  <version>0.4.0</version>
  <description>This package provide a common static member to fuse several detectors</description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
</package>
