<?xml version="1.0"?>
<package format="1">
  <name>gr_fdd</name>
  <version>0.3.0</version>
  <description>This fault detection adn diagnosis attempts to track several siganles on a robot that in case of failure, a fault can be isolated</description>

  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>safety_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>safety_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
  </export>

</package>
