<?xml version="1.0"?>
<package>
  <name>pointcloud_tools</name>
  <version>0.0.1</version>
  <description>
    A set of tools for pointclouds
  </description>

  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>


  <build_depend>pcl_conversions</build_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
